<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="login">Entrar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register">Registrar</string>
    <string name="login_google">Entrar com google</string>
    <string name="register_google_toast">Registro com google</string>
    <string name="login_google_toast">Entrando com google</string>
    <string name="login_toast">Entrando com login normal</string>
    <string name="create_account_login_success">Logado com sucesso</string>
    <string name="create_account_login_fail">Falha ao logar</string>
    <string name="create_account_password_do_not_match">Senhas não coencidem</string>
    <string name="create_account_user_created">Usuario criado com sucesso</string>
    <string name="create_account_email_already_in_use">Email ja cadastrado</string>
    <string name="create_account_weak_password">Senha fraca</string>
    <string name="create_account_equal_but_not_right_size_passwords">Senhas são iguais mas de tamanho inadequado</string>
    <string name="create_account_fill_all_fields">Preencha todos os campos</string>
    <string name="create_account_email_sent">Email enviado com sucesso</string>
    <string name="check_your_email">Verifique seu email</string>
    <string name="add">Adicionar</string>
    <string name="delete">Deletar</string>
    <string name="tasks_list">Lista de tarefas</string>
    <string name="clear">Limpar</string>
    <string name="my_tasks">Minhas tarefas:</string>
    <string name="change_password_do_not_match">Senhas não coencidem</string>
    <string name="change_password_less_then_6">A senha precisa ter mais de 6 digitos</string>
    <string name="change_password_success">Senha Alterada</string>
    <string name="email_sent">Email enviado com sucesso!</string>
    <string name="task_created">Tarefa criada com sucesso!</string>
    <string name="falha_ao_salvar_imagem">Falha ao salvar imagem</string>
    <string name="perfil_atualizado">Perfil atualizado com sucesso</string>
    <string name="falha_ao_atualizar_perfil">Falha ao atualizar perfil</string>
    <string name="permissao_camera_ok">Permissão de camera concedida</string>
    <string name="permissao_camera_negada">Permissão de camera negada</string>
    <string name="permissao_galeria_ok">Permissão de galeria concedida</string>
    <string name="permissao_galeria_negada">Permissão de galeria negada</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="tarefa_atualizada">Tarefa atualizada com sucesso</string>
    <string name="erro_ao_atualizar_tarefa">Erro ao atualizar tarefa</string>
    <string name="erro_ao_carregar_tarefa">Erro ao carregar tarefa</string>
    <string name="deletar_tarefa">Deletar tarefa</string>
    <string name="confirma_deletar_tarefa">Deseja deletar a tarefa?</string>
    <string name="sim">Sim</string>
    <string name="tarefa_deletada">Tarefa deletada com sucesso</string>
    <string name="nao">Não</string>
    <string name="erro_ao_carregar_tarefas">Erro ao carregar tarefas</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="e_mail">E-mail*</string>
    <string name="recuperar">Recuperar</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="salvar">Salvar</string>
    <string name="selecione_um_horario">Selecione um horario</string>
    <string name="cancelar">Cancelar</string>
    <string name="sem_senha">Sem senha</string>
    <string name="senha_muito_fraca">Senha muito fraca</string>
    <string name="senha_fraca">Senha fraca</string>
    <string name="senha_media">Senha media</string>
    <string name="senha_forte">Senha forte</string>
    <string name="senha_muito_forte">Senha muito forte</string>
    <string name="nova_tarefa_vencendo">Sua tarefa mais nova vence agora!</string>
    <string name="proxima_tarefa_vencendo">Fique atento pois sua próxima tarefa vencerá agora!!!</string>
    <string name="sem_email">Sem Email</string>
    <string name="email_invalido">Email inválido</string>
    <string name="email_valido">Email Válido!!!</string>
</resources>