<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.TaskActivity">

    <EditText
        android:id="@+id/tasks_edi_txt_title"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/titulo"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/tasks_edi_txt_description"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/descricao"
        android:imeOptions="actionNone"
        android:inputType="textMultiLine"
        android:lines="4"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_edi_txt_title" />

    <LinearLayout
        android:id="@+id/tasks_layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_edi_txt_description">

        <EditText
            android:id="@+id/tasks_edit_txt_date"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.7"
            android:enabled="false" />

        <Button
            android:id="@+id/tasks_bt_date"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:backgroundTint="@color/light_blue"
            android:text="@string/data" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tasks_layout_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_layout_date">

        <EditText
            android:id="@+id/tasks_edit_txt_hour"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.7"
            android:enabled="false" />

        <Button
            android:id="@+id/tasks_bt_hour"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:backgroundTint="@color/light_blue"
            android:text="@string/hora" />
    </LinearLayout>

    <Button
        android:id="@+id/tasks_bt_save_task"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="@+id/tasks_layout_hour"
        app:layout_constraintStart_toStartOf="@+id/tasks_layout_hour"
        app:layout_constraintTop_toBottomOf="@+id/tasks_layout_hour" />

    <include
        android:id="@+id/time_picker"
        layout="@layout/time_picker_layout"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>